fix: wrap selectors with buttongroup component

--- a/config-ui/src/styles/libraries/blueprint.scss
+++ b/config-ui/src/styles/libraries/blueprint.scss
@@ -101,7 +101,7 @@ button, .bp3-button {
 .bp3-popover-wrapper {
   &.select-epic-key, &.select-story-key {
     width: auto;
-    min-width: 260px;
+    // min-width: 260px;
     max-width: 300px;
   }
 }
